--- a/dating/sass/blocks/popup.scss
+++ b/dating/sass/blocks/popup.scss
@@ -6,8 +6,9 @@
   left: 0;
   width: 100%;
   height: 100%;
+  cursor: pointer;
   opacity: 0.7;
-  transition: z-index 0.1s, background 0.5s ease-in;
+  transition: background 0.5s;
   
   &--inactive {
     z-index: -1;
