--- a/dating/sass/blocks/profile.scss
+++ b/dating/sass/blocks/profile.scss
@@ -76,6 +76,14 @@
       color: #c3c4d0;
     }
   }
+  
+  &--photos {
+    margin: 20px 0;
+    color: #474349;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: left;
+  }
 }
 
 .profile__hr {
@@ -200,7 +208,8 @@
 
 .profile__flex {
   display: flex;
-  // justify-content: space-between;
+  padding: 0 0 20px 0;
+  border-bottom: 1px solid #e1eaf0;
 }
 
 .profile__desc {
@@ -355,7 +364,9 @@
 }
 
 .profile__edit-button {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 150px;
   margin: 15px 0 0 0;
   padding: 10px 0;
@@ -373,7 +384,15 @@
   &:hover {
     color: #fff;
     background: #ff6901;
+    
+    .profile__edit-icon {
+      fill: #fff;
+    }
   }
+}
+
+.profile__edit-icon {
+  fill: #ff6901;
 }
 
 .profile__about {
@@ -699,6 +718,74 @@
   border: 1px solid #ff8116;
   border-width: 0 3px 3px 0;
   transform: rotate(45deg);
+}
+
+// Slider
+.profile__slider {
+
+}
+
+.profile__photos,
+.profile__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.profile__photos {
+  width: 100%;
+}
+
+.profile__photo {
+  position: relative;
+  width: 150px !important;
+  height: 150px !important;
+  border-radius: 8px;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #7880CD;
+    opacity: 0;
+    transition: 0.2s ease-out;
+  }
+  
+  &:hover::before {
+    opacity: 0.2;
+  }
+}
+
+.profile__photo-source {
+  width: 100%;
+  height: 100%;
+}
+
+.profile__upload {
+  width: 150px;
+}
+
+.profile__drop {
+  padding: 20px 0;
+  color: #7880cd;
+  font-size: 13px;
+  font-weight: 600;
+  text-align: center;
+  text-transform: uppercase;
+  border: 3px dotted #7880cd;
+  border-radius: 8px;
+}
+
+.profile__drop-icon {
+  fill: #7880cd;
+  display: block;
+  margin: 0 auto 5px auto;
+}
+
+.profile__input {
+  width: 100%;
 }
 
 @media screen and ($tablet-widths) {
