--- a/dating/sass/global/base.scss
+++ b/dating/sass/global/base.scss
@@ -1,7 +1,11 @@
-body {
+.body {
   min-width: 320px;
   margin: 0;
   font-family: 'Lato', sans-serif;
+  
+  &--inner {
+    background: #f7f9fc;
+  }
 }
 
 .container {
