--- a/dating/sass/blocks/profile.scss
+++ b/dating/sass/blocks/profile.scss
@@ -72,7 +72,7 @@
     padding: 15px 0;
     text-align: left;
     
-    small {
+    &--small {
       color: #c3c4d0;
     }
   }
@@ -83,6 +83,12 @@
     font-size: 16px;
     font-weight: 600;
     text-align: left;
+  }
+  
+  &--small {
+    margin: 5px 0;
+    color: #b6b7c6;
+    font-weight: 400;
   }
 }
 
@@ -734,6 +740,7 @@
 
 .profile__photos {
   width: 100%;
+  margin: 0 20px 0 0;
 }
 
 .profile__photo {
@@ -748,6 +755,7 @@
     top: 0;
     width: 100%;
     height: 100%;
+    border-radius: 8px;
     background: #7880CD;
     opacity: 0;
     transition: 0.2s ease-out;
@@ -774,7 +782,7 @@
   font-weight: 600;
   text-align: center;
   text-transform: uppercase;
-  border: 3px dotted #7880cd;
+  border: 2px dashed #7880cd;
   border-radius: 8px;
 }
 
@@ -788,8 +796,59 @@
   width: 100%;
 }
 
-@media screen and ($tablet-widths) {
+.profile__file {
+  position: absolute;
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	z-index: -1;
+}
 
+.profile__file-label {
+  // display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  cursor: pointer;
+}
+
+.profile__file-icon {
+  margin: 0 3px 0 0;
+}
+
+@media screen and ($tablet-widths) {
+  .profile__desc {
+    width: 100%;
+  }
+  
+  .profile__flex {
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  
+  .profile__info {
+    margin: 30px 0 0 0;
+  }
+  
+  .profile__about {
+    min-width: 100%;
+    margin: 10px 0 0 0;
+  }
+  
+  .profile__photos {
+    flex-wrap: wrap;
+  }
+  
+  .profile__photo {
+    margin: auto auto 30px auto;
+  }
+  
+  .profile__file-label {
+    font-size: 10px;
+  }
 }
 
 @media screen and ($mobile-widths) {
