--- a/dating/css/style.css
+++ b/dating/css/style.css
@@ -450,47 +450,6 @@
   font-weight: 400;
   text-align: center; }
 
-.girl__select {
-  display: none;
-  margin: 0 0 20px 0;
-  border-top: 1px solid #e6eef3;
-  border-bottom: 1px solid #e6eef3; }
-
-.girl__choice {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  width: 50%;
-  padding: 30px 0;
-  color: #c3c4d0;
-  font-size: 20px;
-  font-weight: 700;
-  font-family: inherit;
-  border: none;
-  background: transparent;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: 0.2s;
-  transition: 0.2s; }
-  .girl__choice:first-child {
-    border-right: 1px solid #e6eef3; }
-  .girl__choice--active {
-    color: #8b94d5;
-    border-bottom: 2px solid #8b94d5;
-    background: #f4f9fc; }
-    .girl__choice--active .girl__choice-icon {
-      fill: #8b94d5; }
-
-.girl__choice-icon {
-  fill: #c3c4d0;
-  margin: 0 5px 0 0; }
-
 .girl__flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1325,8 +1284,10 @@
   font-weight: 700; }
 
 @media screen and (max-width: 768px) {
+  .main--profile {
+    padding: 0; }
   .main__title {
-    margin: 0 0 15px 0;
+    margin: 30px 0 20px 0;
     text-align: center; } }
 
 .authorization {
@@ -1818,6 +1779,7 @@
   -ms-flex-positive: 1;
   flex-grow: 1;
   padding: 35px;
+  border-radius: 8px;
   background: #fff;
   -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.11);
   box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.11); }
@@ -1968,6 +1930,8 @@
     background: #ff6901; }
     .profile__edit-button:hover .profile__edit-icon {
       fill: #fff; }
+  .profile__edit-button--photos {
+    display: none; }
 
 .profile__edit-icon {
   fill: #ff6901; }
@@ -2355,9 +2319,10 @@
 .profile__file-icon {
   margin: 0 3px 0 0; }
 
+.profile__select {
+  display: none; }
+
 @media screen and (max-width: 1460px) {
-  .profile__desc {
-    width: 100%; }
   .profile__flex {
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -2381,10 +2346,127 @@
     font-size: 10px; } }
 
 @media screen and (max-width: 768px) {
+  .profile__img-settings,
+  .profile__name-big::before,
+  .profile__id,
+  .profile__hr--info {
+    display: none; }
+  .profile__inner {
+    width: 100%; }
+  .profile__desc {
+    width: 100%;
+    padding: 40px 0;
+    border-radius: 0; }
+  .profile__select {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0 0 20px 0;
+    border-top: 1px solid #e6eef3;
+    border-bottom: 1px solid #e6eef3; }
+    .profile__select--profile {
+      margin: 0; }
+  .profile__choice {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 50%;
+    padding: 20px 0;
+    color: #c3c4d0;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: inherit;
+    border: none;
+    background: transparent;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: 0.2s;
+    transition: 0.2s; }
+    .profile__choice:first-child {
+      border-right: 1px solid #e6eef3; }
+    .profile__choice--active {
+      color: #8b94d5;
+      border-bottom: 2px solid #8b94d5;
+      background: #f4f9fc; }
+      .profile__choice--active .profile__choice-icon {
+        fill: #8b94d5; }
+  .profile__choice-icon {
+    fill: #c3c4d0;
+    margin: 0 5px 0 0; }
   .profile__nav--inner {
     display: none; }
   .profile__popup {
-    width: 95%; } }
+    width: 95%; }
+  .profile__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .profile__info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    margin: 15px 0 0 0;
+    padding: 0; }
+  .profile__name-big {
+    display: block;
+    margin: 0 0 10px 0;
+    text-align: center; }
+  .profile__table {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1; }
+  .profile__edit {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    margin: 0 15px 15px 15px; }
+  .profile__edit-button {
+    width: 45%;
+    margin: 0;
+    color: #fff;
+    background: #ff6901; }
+    .profile__edit-button--photos {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      border: 1px solid #8b94d5;
+      background: #8b94d5; }
+      .profile__edit-button--photos:hover {
+        background: #8b94d5; }
+  .profile__edit-icon {
+    fill: #fff; }
+  .profile__table {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .profile__parameters {
+    width: auto;
+    padding: 20px;
+    font-size: 16px;
+    background: #f4f9fc; }
+    .profile__parameters tr td {
+      width: 50%; }
+    .profile__parameters:first-child {
+      margin: 0;
+      padding: 20px 20px 0 20px; }
+    .profile__parameters:last-child {
+      padding: 0px 20px 20px 20px; } }
 
 .popup__overlay {
   position: fixed;
