--- a/dating/sass/blocks/main.scss
+++ b/dating/sass/blocks/main.scss
@@ -17,8 +17,15 @@
 }
 
 @media screen and ($mobile-widths) {
+  .main {
+    
+    &--profile {
+      padding: 0;
+    }
+  }
+  
   .main__title {
-    margin: 0 0 15px 0;
+    margin: 30px 0 20px 0;
     text-align: center;
   }
 }
