--- a/dating/sass/blocks/profile.scss
+++ b/dating/sass/blocks/profile.scss
@@ -221,6 +221,7 @@
 .profile__desc {
   flex-grow: 1;
   padding: 35px;
+  border-radius: 8px;
   background: #fff;
   box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.11);
 }
@@ -394,6 +395,10 @@
     .profile__edit-icon {
       fill: #fff;
     }
+  }
+  
+  &--photos {
+    display: none;
   }
 }
 
@@ -818,9 +823,13 @@
   margin: 0 3px 0 0;
 }
 
+.profile__select {
+  display: none;
+}
+
 @media screen and ($tablet-widths) {
   .profile__desc {
-    width: 100%;
+    // width: 100%;
   }
   
   .profile__flex {
@@ -852,6 +861,69 @@
 }
 
 @media screen and ($mobile-widths) {
+  .profile__img-settings,
+  .profile__name-big::before,
+  .profile__id,
+  .profile__hr--info {
+    display: none;
+  }
+  
+  .profile__inner {
+    width: 100%;
+  }
+  
+  .profile__desc {
+    width: 100%;
+    padding: 40px 0;
+    border-radius: 0;
+  }
+  
+  .profile__select {
+    display: flex;
+    margin: 0 0 20px 0;
+    border-top: 1px solid #e6eef3;
+    border-bottom: 1px solid #e6eef3;
+    
+    &--profile {
+      margin: 0;
+    }
+  }
+  
+  .profile__choice {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    padding: 20px 0;
+    color: #c3c4d0;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: inherit;
+    border: none;
+    background: transparent;
+    box-sizing: border-box;
+    transition: 0.2s;
+    
+    &:first-child {
+      border-right: 1px solid #e6eef3;
+    }
+    
+    &--active {
+      color: #8b94d5;
+      border-bottom: 2px solid #8b94d5;
+      background: #f4f9fc;
+      
+      .profile__choice-icon {
+        fill: #8b94d5;
+      }
+    }
+  }
+  
+  .profile__choice-icon {
+    fill: #c3c4d0;
+    margin: 0 5px 0 0;
+  }
+  
   .profile__nav {
     
     &--inner {
@@ -861,5 +933,85 @@
   
   .profile__popup {
     width: 95%;
+  }
+  
+  .profile__flex {
+    flex-direction: column;
+  }
+  
+  .profile__info {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 15px 0 0 0;
+    padding: 0;
+  }
+  
+  .profile__name-big {
+    display: block;
+    margin: 0 0 10px 0;
+    text-align: center;
+  }
+  
+  .profile__table {
+    order: 1;
+  }
+  
+  .profile__edit {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 15px 15px 15px;
+  }
+  
+  .profile__edit-button {
+    width: 45%;
+    margin: 0;
+    color: #fff;
+    background: #ff6901;
+    
+    &--photos {
+      display: flex;
+      border: 1px solid #8b94d5;
+      background: #8b94d5;
+      
+      &:hover {
+        background: #8b94d5;
+      }
+    }
+  }
+  
+  .profile__edit-icon {
+    fill: #fff;
+  }
+  
+  .profile__table {
+    flex-direction: column;
+  }
+  
+  .profile__parameters {
+    width: auto;
+    padding: 20px;
+    font-size: 16px;
+    background: #f4f9fc;
+    
+    tr {
+      
+      td {
+        width: 50%;
+      }
+    }
+    
+    &:first-child {
+      margin: 0;
+      padding: 20px 20px 0 20px;
+    }
+    
+    &:last-child {
+      padding: 0px 20px 20px 20px;
+    }
+  }
+  
+  .profile__about {
+    // display: none;
   }
 }
