--- a/deep/sass/blocks/help.scss
+++ b/deep/sass/blocks/help.scss
@@ -6,7 +6,7 @@
   width: 900px;
   margin: auto;
   padding: 150px 0 0 0;
-  background: url('../img/help-icon.svg') no-repeat top / 90px;
+  background: url('../img/branch.svg') no-repeat top / 90px;
   text-align: center;
 }
 
@@ -23,6 +23,7 @@
   color: #636363;
   font-size: 16px;
   font-weight: 400;
+  line-height: 25px;
 }
 
 .help__button {
