--- a/deep/css/style.css
+++ b/deep/css/style.css
@@ -66,6 +66,7 @@ body {
   position: absolute;
   top: 0;
   left: 50%;
+  width: 100%;
   padding: 25px 0;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%); }
@@ -81,6 +82,13 @@ body {
   -ms-flex-pack: justify;
   justify-content: space-between; }
 
+.nav__link {
+  height: 39px; }
+
+.nav__logo {
+  width: 300px;
+  height: 39px; }
+
 .nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -92,6 +100,8 @@ body {
   margin: 0 0 0 -130px;
   padding: 0;
   list-style: none; }
+  .nav__list--footer {
+    margin: 0; }
 
 .nav__item {
   color: #252525;
@@ -101,18 +111,32 @@ body {
   text-transform: uppercase; }
   .nav__item--white {
     color: #fff; }
+  .nav__item--footer {
+    color: #fff; }
 
 .nav__toggle {
   display: none;
-  font-size: 0; }
+  width: 30px;
+  height: 30px;
+  font-size: 0;
+  border: none;
+  background: url("../img/nav.svg") no-repeat center/cover; }
 
 @media screen and (max-width: 1460px) {
+  .nav {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
   .nav__list {
-    width: 250px; } }
+    width: 250px;
+    margin: 0; }
+  .nav__item {
+    color: #fff; } }
 
 @media screen and (max-width: 768px) {
   .nav {
     position: relative; }
+  .nav__logo {
+    width: 220px; }
   .nav__list {
     position: absolute;
     top: 80px;
@@ -137,10 +161,10 @@ body {
       display: flex;
       opacity: 1;
       clip: auto; }
-    .nav__list:last-child {
-      display: none; }
   .nav__logo {
     font-size: 16px; }
+  .nav__signup {
+    display: none !important; }
   .nav__toggle {
     display: block; } }
 
@@ -187,30 +211,52 @@ body {
   background: #ccc url("../img/title-bg.jpg") no-repeat center/cover; }
 
 .title__content {
-  padding: 375px 0;
-  text-align: center; }
+  width: 550px;
+  margin: 0 155px 0 auto;
+  padding: 375px 0; }
 
 .title__name {
   margin: 0;
-  color: #fff;
-  font-size: 72px;
+  color: #A62727;
+  font-size: 64px;
   font-family: 'ITC Avant Garde Gothic Std Book', sans-serif;
   text-transform: uppercase; }
 
 .title__text {
-  margin: 0 0 60px 0;
-  color: #fff;
+  margin: 10px 0 65px 0;
+  color: #3D3D3D;
   font-size: 16px;
-  font-weight: 400; }
+  font-weight: 400;
+  line-height: 25px; }
 
-.title__button {
-  margin: auto; }
+@media screen and (max-width: 1460px) {
+  .title__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .title__left,
+  .title__right {
+    width: auto; }
+  .title__left {
+    background: url("../img/title-bg.jpg") no-repeat center/cover; }
+  .title__right {
+    display: none; }
+  .title__content {
+    padding: 300px 0;
+    margin: auto; }
+  .title__text {
+    color: #fff; } }
 
 @media screen and (max-width: 768px) {
   .title__content {
-    padding: 150px 0; }
+    width: auto;
+    padding: 150px 15px;
+    text-align: center; }
   .title__name {
-    font-size: 35px; } }
+    font-size: 35px; }
+  .title__button {
+    margin: auto; } }
 
 .help {
   padding: 170px 0; }
@@ -219,7 +265,7 @@ body {
   width: 900px;
   margin: auto;
   padding: 150px 0 0 0;
-  background: url("../img/help-icon.svg") no-repeat top/90px;
+  background: url("../img/branch.svg") no-repeat top/90px;
   text-align: center; }
 
 .help__name {
@@ -233,7 +279,8 @@ body {
   margin: 0 0 55px 0;
   color: #636363;
   font-size: 16px;
-  font-weight: 400; }
+  font-weight: 400;
+  line-height: 25px; }
 
 .help__button {
   margin: auto; }
@@ -294,7 +341,8 @@ body {
   margin: 16px 0 25px 0;
   color: #2A2B28;
   font-size: 16px;
-  font-weight: 400; }
+  font-weight: 400;
+  line-height: 25px; }
 
 .steps__right {
   background: url("../img/steps-right.jpg") no-repeat center/cover; }
@@ -357,7 +405,8 @@ body {
   margin: 0 0 55px 0;
   color: #636363;
   font-size: 16px;
-  font-weight: 400; }
+  font-weight: 400;
+  line-height: 25px; }
 
 @media screen and (max-width: 1460px) {
   .app {
@@ -374,7 +423,8 @@ body {
 
 @media screen and (max-width: 768px) {
   .app {
-    padding: 50px 0; }
+    padding: 50px 0;
+    background: url("../img/app-bg.png") no-repeat 0 300px; }
   .app__wrapper {
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -396,6 +446,64 @@ body {
     width: auto; }
   .app__button {
     margin: auto; } }
+
+.find {
+  text-align: center; }
+
+.find__name {
+  margin: 0 0 30px 0;
+  color: #323232;
+  font-size: 56px;
+  font-family: 'ITC Avant Garde Gothic Std Book', sans-serif;
+  text-transform: uppercase; }
+
+.find__text {
+  width: 890px;
+  margin: 0 auto 130px auto;
+  color: #636363;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25px; }
+
+.find__video {
+  position: relative;
+  max-width: 1168px;
+  height: 779px;
+  margin: 0 auto 130px auto;
+  background: url("../img/find-video.jpg") no-repeat center/cover; }
+
+.find__play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 88px;
+  height: 88px;
+  font-size: 0;
+  border: none;
+  background: url("../img/find-play.svg") no-repeat center/cover;
+  cursor: pointer;
+  -webkit-transform: translate(-50%);
+  transform: translate(-50%); }
+
+.find__branch {
+  width: 90px;
+  height: 90px;
+  margin: 0 auto 180px auto;
+  background: url("../img/branch.svg") no-repeat center/cover; }
+
+@media screen and (max-width: 1460px) {
+  .find__text {
+    width: 600px; } }
+
+@media screen and (max-width: 768px) {
+  .find {
+    padding: 50px 0; }
+  .find__name {
+    font-size: 35px; }
+  .find__text {
+    width: auto; }
+  .find__branch {
+    margin: 0 auto 80px auto; } }
 
 .footer {
   padding: 25px 0;
