--- a/forexglobal/sass/blocks/main/form.scss
+++ b/forexglobal/sass/blocks/main/form.scss
@@ -42,12 +42,14 @@
       border: 2px solid #fff;
       border-radius: 3px;
       transition: 0.3s;
+      cursor: pointer;
       outline: none;
       
       &::placeholder {
         color: $sc;
       }
       
+      &:hover,
       &:focus {
         border: 2px solid #7865ff;
       }
@@ -66,9 +68,12 @@
       background: #fff url('../img/nav-arrow.svg') no-repeat center;
       background-size: 10px;
       background-position-x: 260px; 
-      outline: none;
       appearance: none;
+      cursor: pointer;
+      transition: 0.3s;
+      outline: none;
       
+      &:hover,
       &:focus {
         border: 2px solid #7865ff;
       }
@@ -85,7 +90,9 @@
       border: none;
       border-radius: 3px;
       background: $mc;
+      cursor: pointer;
       transition: 0.3s;
+      outline: none;
       
       &::after {
         content: 'Trading involves risk of loss';
@@ -97,9 +104,10 @@
         font-size: 10px;
       }
       
-      &:hover {
-        box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+      &:hover,
+      &:focus {
         background: #ffd800;
+        transform: translateY(-5px);
       }
     }
   }
