--- a/forexglobal/sass/blocks/main/tabs.scss
+++ b/forexglobal/sass/blocks/main/tabs.scss
@@ -26,6 +26,11 @@
       outline: none;
       transition: 0.3s;
       cursor: pointer;
+      
+      &:hover,
+      &:focus {
+        border-bottom: 2px solid $sc;
+      }
     }
   }
 }
@@ -88,7 +93,14 @@
   text-decoration: none;
   border-radius: 3px;
   background: $sc;
-  box-shadow: 0px 8px 10px 0px rgba(210, 156, 1, 0.5);
+  box-shadow: 5px 5px 5px 0px rgba(210, 156, 1, 0.5);
+  transition: 0.3s;
+  outline: none;
+  
+  &:hover,
+  &:focus {
+    transform: translateY(-5px);
+  }
 }
 
 .tabs__more {
@@ -102,6 +114,13 @@
   text-decoration: none;
   border: 1px solid $sc;
   border-radius: 3px;
+  transition: 0.3s;
+  outline: none;
+  
+  &:hover,
+  &:focus {
+    transform: translateY(-5px);
+  }
 }
 
 @media screen and ($tablet-widths) {
