--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -7,6 +7,18 @@ body {
   width: 1200px;
   margin: 0 auto; }
 
+::-webkit-scrollbar {
+  width: 10px; }
+
+::-webkit-scrollbar-track {
+  background: #ccc; }
+
+::-webkit-scrollbar-thumb {
+  background: #2f2861; }
+
+::-webkit-scrollbar-thumb:hover {
+  background: #fac93e; }
+
 @media screen and (max-width: 1200px) {
   .container {
     width: 100%; } }
@@ -103,6 +115,7 @@ body {
     background: transparent;
     -webkit-transition: 0.3s;
     transition: 0.3s;
+    cursor: pointer;
     outline: none; }
     .title__form input::-webkit-input-placeholder {
       color: #fac93e; }
@@ -110,7 +123,7 @@ body {
       color: #fac93e; }
     .title__form input::placeholder {
       color: #fac93e; }
-    .title__form input:focus {
+    .title__form input:hover, .title__form input:focus {
       border: 1px solid #7865ff; }
   .title__form button {
     position: relative;
@@ -123,8 +136,10 @@ body {
     border: none;
     border-radius: 3px;
     background: #fac93e;
-    -webkit-transition: 0.3s linear;
-    transition: 0.3s linear; }
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    outline: none; }
     .title__form button::after {
       content: 'Trading involves risk of loss';
       position: absolute;
@@ -133,10 +148,10 @@ body {
       width: inherit;
       color: #fac93e;
       font-size: 10px; }
-    .title__form button:hover {
-      -webkit-box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
-      box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
-      background: #ffd800; }
+    .title__form button:hover, .title__form button:focus {
+      background: #ffd800;
+      -webkit-transform: translateY(-5px);
+      transform: translateY(-5px); }
 
 .title__down {
   position: relative;
@@ -146,13 +161,10 @@ body {
   margin: auto;
   border: none;
   background: url("../img/title-arrow.svg");
-  -webkit-animation: down 1s;
-  animation: down 1s;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-direction: alternate;
-  animation-direction: alternate;
-  cursor: pointer; }
+  -webkit-animation: down 0.5s alternate infinite;
+  animation: down 0.5s alternate infinite;
+  cursor: pointer;
+  outline: none; }
 
 @-webkit-keyframes down {
   0% {
@@ -204,12 +216,12 @@ body {
       width: 400px;
       z-index: 3; }
       .header--scroll .header__user li a {
-        width: 133px;
+        width: 155px;
         padding: 9px 0;
         -webkit-transition: 0.3s;
         transition: 0.3s; }
     .header--scroll .header__open::before {
-      right: 5px; }
+      right: 10px; }
     .header--scroll .nav__search {
       display: none; }
     .header--scroll .nav {
@@ -290,8 +302,8 @@ body {
       text-decoration: none;
       border: 1px solid #fac93e;
       border-radius: 3px;
-      -webkit-transition: 0.2s;
-      transition: 0.2s;
+      -webkit-transition: 0.3s;
+      transition: 0.3s;
       outline: none; }
       .header__user li a:hover, .header__user li a:focus {
         color: #2f2861;
@@ -365,8 +377,8 @@ body {
   background: transparent url("../img/nav-arrow.svg") no-repeat right;
   background-position-x: 50px;
   background-size: 6px 3px;
-  -webkit-transition: 0.2s linear;
-  transition: 0.2s linear;
+  -webkit-transition: 0.3s linear;
+  transition: 0.3s linear;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -393,42 +405,49 @@ body {
     width: 100%; } }
 
 @media screen and (max-width: 768px) {
-  .header--scroll {
+  .header {
     position: fixed;
     top: 0;
     background: rgba(47, 40, 97, 0.9);
     z-index: 1; }
-    .header--scroll .header__flex {
+    .header .header__flex {
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
       -ms-flex-direction: row;
       flex-direction: row;
       padding: 18px 15px;
       border: none; }
-    .header--scroll .header__logo {
+    .header .header__logo {
       width: 100px; }
-    .header--scroll .header__toggle {
+    .header .header__toggle {
       display: block; }
-    .header--scroll .header__user {
+    .header .header__user {
       -webkit-transition: 0.5s;
       transition: 0.5s; }
-      .header--scroll .header__user li {
+      .header .header__user li {
         margin: 0 0 20px 0; }
-        .header--scroll .header__user li a {
+        .header .header__user li a {
           width: 133px;
           padding: 9px 0;
           -webkit-transition: 0.3s;
           transition: 0.3s; }
-        .header--scroll .header__user li:nth-child(2) {
+        .header .header__user li:nth-child(2) {
           margin: 0 0 10px 0; }
-        .header--scroll .header__user li:nth-child(3) {
+        .header .header__user li:nth-child(3) {
           margin: 0; }
-      .header--scroll .header__user--closed {
+      .header .header__user--closed {
         position: absolute;
         top: -200px;
         left: 0;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
         width: 100%; }
-      .header--scroll .header__user--opened {
+      .header .header__user--opened {
         position: absolute;
         top: 68px;
         left: 0;
@@ -442,61 +461,39 @@ body {
         width: 100%;
         padding: 0;
         background: rgba(47, 40, 97, 0.9); }
-        .header--scroll .header__user--opened li a {
+        .header .header__user--opened li a {
           width: 138px;
           font-size: 14px; }
-    .header--scroll .header__open::before {
+    .header .header__open::before {
       top: 16px;
       right: 13px; }
-    .header--scroll .header__open::after {
+    .header .header__open::after {
       font-size: 8px; }
-    .header--scroll .nav__search {
+    .header .nav__search {
       display: none; }
-    .header--scroll .nav {
+    .header .nav {
       position: absolute;
       top: 0;
       display: block;
       -webkit-transition: 0.8s;
       transition: 0.8s; }
-      .header--scroll .nav--closed {
-        position: absolute;
-        top: -500px; }
-      .header--scroll .nav--opened {
-        position: absolute;
+      .header .nav--closed {
+        top: -500px;
+        width: 100%; }
+      .header .nav--opened {
         top: 206px;
+        width: 100%;
         padding: 20px 0;
         background: rgba(47, 40, 97, 0.9); }
-    .header--scroll .nav__wrapper {
+    .header .nav__wrapper {
       padding: 0 0 10px 0; }
-      .header--scroll .nav__wrapper--opened {
+      .header .nav__wrapper--opened {
         top: 175px; }
-    .header--scroll .nav__list a {
+    .header .nav__list a {
       padding: 0 0 3px 0; }
-    .header--scroll .header__language {
+    .header .header__language {
       height: 36px;
-      font-size: 14px; }
-  .header__user {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    width: auto; }
-    .header__user li {
-      margin: 25px 0 0 0; }
-  .header__flex {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column; }
-  .header__accounts {
-    border: 1px solid #fac93e;
-    border-radius: 3px;
-    background: #2f2861; }
-    .header__accounts li {
-      margin: 0 !important; } }
+      font-size: 14px; } }
 
 .nav {
   display: -webkit-box;
@@ -552,7 +549,7 @@ body {
   width: 100%;
   border-top: 2px solid #2f2861;
   border-bottom: 2px solid #2f2861;
-  background: rgba(47, 40, 97, 0.8);
+  background: rgba(47, 40, 97, 0.9);
   -webkit-transition: 0.5s;
   transition: 0.5s; }
   .nav__wrapper--closed {
@@ -641,6 +638,8 @@ body {
 @media screen and (max-width: 768px) {
   .nav--closed, .nav--opened {
     display: none; }
+  .nav__wrapper {
+    border: none; }
   .nav__list {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -921,11 +920,14 @@ body {
     text-decoration: none;
     border: 1px solid #fac93e;
     border-radius: 3px;
-    -webkit-transition: 0.2s linear;
-    transition: 0.2s linear; }
-    .account__box a:hover {
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    outline: none; }
+    .account__box a:hover, .account__box a:focus {
       color: #2f2861;
-      background: #fac93e; }
+      background: #fac93e;
+      -webkit-transform: translateY(-5px);
+      transform: translateY(-5px); }
     .account__box a::after {
       content: 'Trading involves risk of loss';
       position: absolute;
@@ -1006,6 +1008,8 @@ body {
     -webkit-transition: 0.3s;
     transition: 0.3s;
     cursor: pointer; }
+    .tabs__control li button:hover, .tabs__control li button:focus {
+      border-bottom: 2px solid #2f2861; }
 
 .tabs__active {
   font-weight: 900 !important;
@@ -1061,8 +1065,14 @@ body {
   text-decoration: none;
   border-radius: 3px;
   background: #2f2861;
-  -webkit-box-shadow: 0px 8px 10px 0px rgba(210, 156, 1, 0.5);
-  box-shadow: 0px 8px 10px 0px rgba(210, 156, 1, 0.5); }
+  -webkit-box-shadow: 5px 5px 5px 0px rgba(210, 156, 1, 0.5);
+  box-shadow: 5px 5px 5px 0px rgba(210, 156, 1, 0.5);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  outline: none; }
+  .tabs__download:hover, .tabs__download:focus {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px); }
 
 .tabs__more {
   display: inline-block;
@@ -1074,7 +1084,13 @@ body {
   text-align: center;
   text-decoration: none;
   border: 1px solid #2f2861;
-  border-radius: 3px; }
+  border-radius: 3px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  outline: none; }
+  .tabs__more:hover, .tabs__more:focus {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px); }
 
 @media screen and (max-width: 1200px) {
   .tabs__flex {
@@ -1140,7 +1156,7 @@ body {
 
 .license__box {
   width: 350px;
-  padding: 180px 0 0 0; }
+  padding: 130px 0 0 0; }
   .license__box b {
     display: block;
     color: #2f2861;
@@ -1158,13 +1174,13 @@ body {
     font-weight: 300; }
   .license__box--1 {
     background: url("../img/license-1.svg") no-repeat top;
-    background-size: 150px; }
+    background-size: 100px; }
   .license__box--2 {
     background: url("../img/license-2.svg") no-repeat top;
-    background-size: 170px; }
+    background-size: 120px; }
   .license__box--3 {
     background: url("../img/license-3.svg") no-repeat top;
-    background-size: 120px 150px; }
+    background-size: 100px; }
 
 @media screen and (max-width: 1200px) {
   .license__name {
@@ -1255,6 +1271,7 @@ body {
       border-radius: 3px;
       -webkit-transition: 0.3s;
       transition: 0.3s;
+      cursor: pointer;
       outline: none; }
       .form form input::-webkit-input-placeholder {
         color: #2f2861; }
@@ -1262,7 +1279,7 @@ body {
         color: #2f2861; }
       .form form input::placeholder {
         color: #2f2861; }
-      .form form input:focus {
+      .form form input:hover, .form form input:focus {
         border: 2px solid #7865ff; }
     .form form select {
       height: 41px;
@@ -1277,11 +1294,14 @@ body {
       background: #fff url("../img/nav-arrow.svg") no-repeat center;
       background-size: 10px;
       background-position-x: 260px;
-      outline: none;
       -webkit-appearance: none;
       -moz-appearance: none;
-      appearance: none; }
-      .form form select:focus {
+      appearance: none;
+      cursor: pointer;
+      -webkit-transition: 0.3s;
+      transition: 0.3s;
+      outline: none; }
+      .form form select:hover, .form form select:focus {
         border: 2px solid #7865ff; }
     .form form button {
       position: relative;
@@ -1294,8 +1314,10 @@ body {
       border: none;
       border-radius: 3px;
       background: #fac93e;
+      cursor: pointer;
       -webkit-transition: 0.3s;
-      transition: 0.3s; }
+      transition: 0.3s;
+      outline: none; }
       .form form button::after {
         content: 'Trading involves risk of loss';
         position: absolute;
@@ -1304,10 +1326,10 @@ body {
         width: 100%;
         color: #fac93e;
         font-size: 10px; }
-      .form form button:hover {
-        -webkit-box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
-        box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
-        background: #ffd800; }
+      .form form button:hover, .form form button:focus {
+        background: #ffd800;
+        -webkit-transform: translateY(-5px);
+        transform: translateY(-5px); }
 
 @media screen and (max-width: 768px) {
   .form {
@@ -1399,8 +1421,11 @@ body {
     font-weight: 300;
     text-decoration: none;
     -webkit-transition: 0.3s;
-    transition: 0.3s; }
-    .footer__ul--links a:hover {
+    transition: 0.3s;
+    outline: none; }
+    .footer__ul--links a[href^="tel:"], .footer__ul--links a[href^="mailto:"] {
+      text-decoration: underline; }
+    .footer__ul--links a:hover, .footer__ul--links a:focus {
       color: #fac93e; }
   .footer__ul--links li {
     color: #cdcdcf;
@@ -1425,7 +1450,15 @@ body {
   text-align: center;
   text-decoration: none;
   border: 1px solid #fff;
-  border-radius: 3px; }
+  border-radius: 3px;
+  outline: none;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .footer__callme:hover, .footer__callme:focus {
+    color: #fac93e;
+    border: 1px solid #fac93e;
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px); }
 
 .footer__hr {
   height: 1px;
@@ -1450,8 +1483,9 @@ body {
   .footer__text a {
     color: #fefeff;
     -webkit-transition: 0.3s;
-    transition: 0.3s; }
-    .footer__text a:hover {
+    transition: 0.3s;
+    outline: none; }
+    .footer__text a:hover, .footer__text a:focus {
       color: #fac93e; }
 
 .footer__social {
@@ -1465,24 +1499,33 @@ body {
 .footer__link {
   width: 25px;
   height: 25px;
-  -webkit-transition: 0.3s linear;
-  transition: 0.3s linear; }
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  outline: none; }
   .footer__link--fb {
     background: url("../img/footer-fb.svg") no-repeat top; }
-    .footer__link--fb:hover {
-      background: url("../img/footer-fb-h.svg") no-repeat top; }
+    .footer__link--fb:hover, .footer__link--fb:focus {
+      background: url("../img/footer-fb-h.svg") no-repeat top;
+      -webkit-transform: translateY(-5px);
+      transform: translateY(-5px); }
   .footer__link--li {
     background: url("../img/footer-li.svg") no-repeat top; }
-    .footer__link--li:hover {
-      background: url("../img/footer-li-h.svg") no-repeat top; }
+    .footer__link--li:hover, .footer__link--li:focus {
+      background: url("../img/footer-li-h.svg") no-repeat top;
+      -webkit-transform: translateY(-5px);
+      transform: translateY(-5px); }
   .footer__link--gp {
     background: url("../img/footer-gp.svg") no-repeat top; }
-    .footer__link--gp:hover {
-      background: url("../img/footer-gp-h.svg") no-repeat top; }
+    .footer__link--gp:hover, .footer__link--gp:focus {
+      background: url("../img/footer-gp-h.svg") no-repeat top;
+      -webkit-transform: translateY(-5px);
+      transform: translateY(-5px); }
   .footer__link--tw {
     background: url("../img/footer-tw.svg") no-repeat top; }
-    .footer__link--tw:hover {
-      background: url("../img/footer-tw-h.svg") no-repeat top; }
+    .footer__link--tw:hover, .footer__link--tw:focus {
+      background: url("../img/footer-tw-h.svg") no-repeat top;
+      -webkit-transform: translateY(-5px);
+      transform: translateY(-5px); }
 
 @media screen and (max-width: 768px) {
   .footer__flex {
