--- a/forexglobal/sass/blocks/main/account.scss
+++ b/forexglobal/sass/blocks/main/account.scss
@@ -64,11 +64,14 @@
     text-decoration: none;
     border: 1px solid $mc;
     border-radius: 3px;
-    transition: 0.2s linear;
+    transition: 0.3s;
+    outline: none;
     
-    &:hover {
+    &:hover,
+    &:focus {
       color: $sc;
       background: $mc;
+      transform: translateY(-5px);
     }
     
     &::after {
