--- a/forexglobal/sass/blocks/main/title.scss
+++ b/forexglobal/sass/blocks/main/title.scss
@@ -36,12 +36,14 @@
     border-radius: 3px;
     background: transparent;
     transition: 0.3s;
+    cursor: pointer;
     outline: none;
     
     &::placeholder {
       color: $mc;
     }
     
+    &:hover,
     &:focus {
       border: 1px solid #7865ff;
     }
@@ -58,7 +60,9 @@
     border: none;
     border-radius: 3px;
     background: $mc;
-    transition: 0.3s linear;
+    cursor: pointer;
+    transition: 0.3s;
+    outline: none;
     
     &::after {
       content: 'Trading involves risk of loss';
@@ -70,9 +74,10 @@
       font-size: 10px;
     }
     
-    &:hover {
-      box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+    &:hover,
+    &:focus {
       background: #ffd800;
+      transform: translateY(-5px);
     }
   }
 }
@@ -85,10 +90,9 @@
   margin: auto;
   border: none;
   background: url('../img/title-arrow.svg');
-  animation: down 1s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+  animation: down 0.5s alternate infinite;
   cursor: pointer;
+  outline: none;
 }
 
 @keyframes down {
