--- a/forexglobal/sass/blocks/main/tabs.scss
+++ b/forexglobal/sass/blocks/main/tabs.scss
@@ -139,7 +139,7 @@
 
 @media screen and ($mobile-widths) {
   .tabs {
-    height: 400px;
+    // height: 400px;
   }
   
   .tabs__control {
@@ -155,7 +155,7 @@
   }
   
   .tabs__content {
-    height: 400px;
+    // height: 400px;
   }
   
   .tabs__download {
