--- a/yes/app/sass/blocks/title.scss
+++ b/yes/app/sass/blocks/title.scss
@@ -1,5 +1,6 @@
 .title {
   position: relative;
+  // padding: 0 0 100px 0;
 }
 
 .title__decoration {
@@ -13,7 +14,71 @@
 }
 
 .title__mockup {
+  position: relative;
   width: 600px;
   height: 800px;
   background: url('../img/bus-mockup.png') no-repeat center;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: -100px;
+    width: 85px;
+    height: 85px;
+    border: 15px solid $main-blue;
+    border-radius: 50%;
+    box-sizing: border-box;
+    animation: 1s decorate-bounce infinite alternate;
+  }
+}
+
+@keyframes decorate-fill {
+  0% {}
+  
+  100% {
+    background: $main-blue;
+  }
+}
+
+.title__content {
+  position: relative;
+  width: 515px;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: -70px;
+    right: 200px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: $main-blue;
+    animation: 2s decorate-bounce infinite alternate;
+  }
+}
+
+@keyframes decorate-bounce {
+  0% {transform:scale(0); opacity:0;}
+  50% {transform:scale(1.3); opacity:0.4;}
+  75% {transform:scale(0.9); opacity:0.7;}
+  100% {transform:scale(1); opacity:1;}
+}
+
+.title__heading {
+  margin: 0 0 20px 0;
+  color: $main-black;
+  font-size: 45px;
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
+.title__small {
+  font-size: 35px;
+}
+
+.title__text {
+  margin: 20px 0 90px 0;
+  font-size: 18px;
+  font-weight: 300;
 }
