--- a/yes/app/sass/blocks/situation.scss
+++ b/yes/app/sass/blocks/situation.scss
@@ -1,6 +1,17 @@
 .situation {
-  padding: 300px 0 0 0;
+  position: relative;
+  padding: 300px 0 50px 0;
   background: url('../img/situation-bg.png') no-repeat 0 -100px;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: 600px;
+    left: 30%;
+    width: 2px;
+    height: 1200px;
+    background: #e9e9e9;
+  }
 }
 
 .situation__heading {
@@ -8,28 +19,59 @@
   font-size: 45px;
   font-weight: 800;
   text-transform: uppercase;
+  z-index: 5;
   
   &::before {
     content: '?';
     position: absolute;
-    bottom: 0;
+    top: -140px;
+    right: -170px;
     color: #e9e9e9;
     font-size: 300px;
     font-weight: 800;
+    z-index: 2;
   }
 }
 
 .situation__box {
   position: relative;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   width: 800px;
-  margin: 0 0 0 auto;
+  
+  &--right {
+    margin: 0 0 80px auto;
+    
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: -50px;
+      right: 100px;
+      width: 145px;
+      height: 20px;
+      background: url('../img/svg/wave.svg') no-repeat center;
+    }
+  }
+  
+  &--left {
+    margin: 0 auto 80px 0;
+  }
 }
 
 .situation__number {
   position: absolute;
+  top: 50px;
   font-size: 48px;
   font-weight: 800;
+  
+  &--right {
+    left: 250px;
+  }
+  
+  &--left {
+    right: 250px;
+  }
 }
 
 .situation__dot {
@@ -42,4 +84,25 @@
   font-size: 18px;
   font-weight: 300;
   line-height: 25px;
+}
+
+.situation__img {
+  width: 450px;
+  height: 350px;
+  
+  &--1 {
+    background: url('../img/situation-1.jpg') no-repeat center / cover;
+  }
+  
+  &--2 {
+    background: url('../img/situation-2.jpg') no-repeat center / cover;
+  }
+  
+  &--3 {
+    background: url('../img/situation-3.jpg') no-repeat top / cover;
+  }
+  
+  &--4 {
+    background: url('../img/situation-4.jpg') no-repeat center / cover;
+  }
 }
